// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stepper > should add the proper class name for the desired variant 1`] = `
<div
  class="dusk-stepper dusk-stepper--variant--secondary"
  style="--columns: 5; --progress-width: 40%;"
>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    1
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    foo
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    2
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    bar
  </span>
  <span
    aria-current="step"
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    3
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    baz
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    4
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    qux
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    <svg
      class="dusk-icon dusk-icon--size--default"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 12L20.6 9.2L20.9 5.5L17.3 4.7L15.4 1.5L12 3L8.6 1.5L6.7 4.7L3.1 5.5L3.4 9.2L1 12L3.4 14.8L3.1 18.5L6.7 19.3L8.6 22.5L12 21L15.4 22.5L17.3 19.3L20.9 18.5L20.6 14.8L23 12M18.7 16.9L16 17.5L14.6 19.9L12 18.8L9.4 19.9L8 17.5L5.3 16.9L5.5 14.1L3.7 12L5.5 9.9L5.3 7.1L8 6.5L9.4 4.1L12 5.2L14.6 4.1L16 6.5L18.7 7.1L18.5 9.9L20.3 12L18.5 14.1L18.7 16.9M16.6 7.6L18 9L10 17L6 13L7.4 11.6L10 14.2L16.6 7.6Z"
      />
    </svg>
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    quux
  </span>
  
</div>
`;

exports[`Stepper > should allow to hide the step numbers 1`] = `
<div
  class="dusk-stepper dusk-stepper--variant--primary"
  style="--columns: 5; --progress-width: 40%;"
>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    foo
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    bar
  </span>
  <span
    aria-current="step"
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    baz
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    qux
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    <svg
      class="dusk-icon dusk-icon--size--default"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 12L20.6 9.2L20.9 5.5L17.3 4.7L15.4 1.5L12 3L8.6 1.5L6.7 4.7L3.1 5.5L3.4 9.2L1 12L3.4 14.8L3.1 18.5L6.7 19.3L8.6 22.5L12 21L15.4 22.5L17.3 19.3L20.9 18.5L20.6 14.8L23 12M18.7 16.9L16 17.5L14.6 19.9L12 18.8L9.4 19.9L8 17.5L5.3 16.9L5.5 14.1L3.7 12L5.5 9.9L5.3 7.1L8 6.5L9.4 4.1L12 5.2L14.6 4.1L16 6.5L18.7 7.1L18.5 9.9L20.3 12L18.5 14.1L18.7 16.9M16.6 7.6L18 9L10 17L6 13L7.4 11.6L10 14.2L16.6 7.6Z"
      />
    </svg>
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    quux
  </span>
  
</div>
`;

exports[`Stepper > should pass additional class names and attributes to the rendered element 1`] = `
<div
  class="dusk-stepper dusk-stepper--variant--primary foo bar"
  id="some-id"
  style="--columns: 5; --progress-width: 40%;"
>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    1
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    foo
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    2
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    bar
  </span>
  <span
    aria-current="step"
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    3
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    baz
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    4
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    qux
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    <svg
      class="dusk-icon dusk-icon--size--default"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 12L20.6 9.2L20.9 5.5L17.3 4.7L15.4 1.5L12 3L8.6 1.5L6.7 4.7L3.1 5.5L3.4 9.2L1 12L3.4 14.8L3.1 18.5L6.7 19.3L8.6 22.5L12 21L15.4 22.5L17.3 19.3L20.9 18.5L20.6 14.8L23 12M18.7 16.9L16 17.5L14.6 19.9L12 18.8L9.4 19.9L8 17.5L5.3 16.9L5.5 14.1L3.7 12L5.5 9.9L5.3 7.1L8 6.5L9.4 4.1L12 5.2L14.6 4.1L16 6.5L18.7 7.1L18.5 9.9L20.3 12L18.5 14.1L18.7 16.9M16.6 7.6L18 9L10 17L6 13L7.4 11.6L10 14.2L16.6 7.6Z"
      />
    </svg>
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    quux
  </span>
  
</div>
`;

exports[`Stepper > should render the \`Stepper\` component accepting a number as the amount of steps 1`] = `
<div
  class="dusk-stepper dusk-stepper--variant--primary"
  style="--columns: 5; --progress-width: 40%;"
>
  <span
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    1
  </span>
  <span
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    2
  </span>
  <span
    aria-current="step"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    3
  </span>
  <span
    class="dusk-stepper__step"
  >
    4
  </span>
  <span
    class="dusk-stepper__step"
  >
    5
  </span>
  
</div>
`;

exports[`Stepper > should render the \`Stepper\` component accepting a number as the amount of steps 2`] = `
<div
  class="dusk-stepper dusk-stepper--variant--primary"
  style="--columns: 5; --progress-width: 60%;"
>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    1
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    foo
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    2
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    bar
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    3
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    baz
  </span>
  <span
    aria-current="step"
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    4
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    qux
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    <svg
      class="dusk-icon dusk-icon--size--default"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 12L20.6 9.2L20.9 5.5L17.3 4.7L15.4 1.5L12 3L8.6 1.5L6.7 4.7L3.1 5.5L3.4 9.2L1 12L3.4 14.8L3.1 18.5L6.7 19.3L8.6 22.5L12 21L15.4 22.5L17.3 19.3L20.9 18.5L20.6 14.8L23 12M18.7 16.9L16 17.5L14.6 19.9L12 18.8L9.4 19.9L8 17.5L5.3 16.9L5.5 14.1L3.7 12L5.5 9.9L5.3 7.1L8 6.5L9.4 4.1L12 5.2L14.6 4.1L16 6.5L18.7 7.1L18.5 9.9L20.3 12L18.5 14.1L18.7 16.9M16.6 7.6L18 9L10 17L6 13L7.4 11.6L10 14.2L16.6 7.6Z"
      />
    </svg>
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    quux
  </span>
  
</div>
`;

exports[`Stepper > should render the \`Stepper\` component accepting an array of \`StepperStep\` objects as steps 1`] = `
<div
  class="dusk-stepper dusk-stepper--variant--primary"
  style="--columns: 5; --progress-width: 40%;"
>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    1
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    foo
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    2
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    bar
  </span>
  <span
    aria-current="step"
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    3
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    baz
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    4
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    qux
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    <svg
      class="dusk-icon dusk-icon--size--default"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 12L20.6 9.2L20.9 5.5L17.3 4.7L15.4 1.5L12 3L8.6 1.5L6.7 4.7L3.1 5.5L3.4 9.2L1 12L3.4 14.8L3.1 18.5L6.7 19.3L8.6 22.5L12 21L15.4 22.5L17.3 19.3L20.9 18.5L20.6 14.8L23 12M18.7 16.9L16 17.5L14.6 19.9L12 18.8L9.4 19.9L8 17.5L5.3 16.9L5.5 14.1L3.7 12L5.5 9.9L5.3 7.1L8 6.5L9.4 4.1L12 5.2L14.6 4.1L16 6.5L18.7 7.1L18.5 9.9L20.3 12L18.5 14.1L18.7 16.9M16.6 7.6L18 9L10 17L6 13L7.4 11.6L10 14.2L16.6 7.6Z"
      />
    </svg>
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    quux
  </span>
  
</div>
`;

exports[`Stepper > should render the \`Stepper\` component accepting an array of \`StepperStep\` objects as steps 2`] = `
<div
  class="dusk-stepper dusk-stepper--variant--primary"
  style="--columns: 5; --progress-width: 60%;"
>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    1
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    foo
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    2
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    bar
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    3
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    baz
  </span>
  <span
    aria-current="step"
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step dusk-stepper__step--processed"
  >
    4
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    qux
  </span>
  <span
    aria-labelledby="step-some-generated-id"
    class="dusk-stepper__step"
  >
    <svg
      class="dusk-icon dusk-icon--size--default"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 12L20.6 9.2L20.9 5.5L17.3 4.7L15.4 1.5L12 3L8.6 1.5L6.7 4.7L3.1 5.5L3.4 9.2L1 12L3.4 14.8L3.1 18.5L6.7 19.3L8.6 22.5L12 21L15.4 22.5L17.3 19.3L20.9 18.5L20.6 14.8L23 12M18.7 16.9L16 17.5L14.6 19.9L12 18.8L9.4 19.9L8 17.5L5.3 16.9L5.5 14.1L3.7 12L5.5 9.9L5.3 7.1L8 6.5L9.4 4.1L12 5.2L14.6 4.1L16 6.5L18.7 7.1L18.5 9.9L20.3 12L18.5 14.1L18.7 16.9M16.6 7.6L18 9L10 17L6 13L7.4 11.6L10 14.2L16.6 7.6Z"
      />
    </svg>
    
  </span>
   
  <span
    class="dusk-stepper__step-label"
    id="step-some-generated-id"
  >
    quux
  </span>
  
</div>
`;
